--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "google-spreadsheet": "^3.3.0",
+    "googleapis": "^154.1.0",
     "node-telegram-bot-api": "^0.66.0",
     "telegraf": "^4.16.3"
   },
