--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "google-auth-library": "^10.2.0",
     "google-spreadsheet": "^4.1.5",
     "googleapis": "^154.1.0",
     "node-telegram-bot-api": "^0.63.0",
