--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-creds.json
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .env
-node_modules
+.env.local
+.env.*.local
+logs/
+*.log
+pids/
+*.pid
+*.seed
+dist/
+build/
+.DS_Store
+Thumbs.db
+.render/
+.vscode/
+.idea/
+*.tmp
